# practical_networked_applications

./: Cargo.toml  README.md
project-1/: Cargo.toml  Makefile  README.md
project-1/src/: kv.rs
project-2/: Cargo.toml  Makefile  README.md
project-2/src/: error.rs  kv.rs  lib.rs
project-2/tests/: tests.rs
project-3/: Cargo.toml  README.md
project-3/src/: client.rs  common.rs  engine.rs  error.rs  lib.rs  server.rs
project-3/src/engines/: kvs.rs  mod.rs  sled.rs  store.rs
project-3/tests/: kv_store.rs
project-4/: Cargo.toml
project-4/src/: api.rs  engines.rs  lib.rs  pool.rs  server.rs
