[package]
name = "kvs"
version = "0.1.0"
authors = ["kuronyago <yegor.pesterev@gmail.com>"]
description = "A key-value store"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
test = false

[[bin]]
name = "kvs"
test = false

[dependencies]
clap = "2.33.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.47"

[dev-dependencies]
assert_cmd = "0.12.0"
predicates = "1.0.2"
tempfile = "3.1.0"
walkdir = "2.2.9"