[package]
name = "project-2"
version = "0.1.0"
authors = ["kuronyago <yegor.pesterev@gmail.com>"]
description = "A key-value store"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
test = false

[[bin]]
name = "kvs"
test = false

[dependencies]
clap = "2.33.3"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.62"

[dev-dependencies]
assert_cmd = "1.0.3"
predicates = "1.0.7"
tempfile = "3.2.0"
walkdir = "2.3.1"