[package]
name = "project-3"
version = "0.1.0"
authors = ["kuronyago <yegor.pesterev@gmail.com>"]
description = "A key-value store"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
structopt = "0.3.17"
failure = "0.1.8"
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
log = "0.4.11"
env_logger = "0.7.1"
sled = "0.34.3"

[dev-dependencies]
assert_cmd = "1.0.1"
tempfile = "3.1.0"
criterion = "0.3.3"
predicates = "1.0.5"
rand = "0.7.3"
walkdir = "2.3.1"