[package]
name = "project-3"
version = "0.1.0"
authors = ["kuronyago <yegor.pesterev@gmail.com>"]
description = "A key-value store"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
structopt = "0.3.21"
failure = "0.1.8"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.62"
log = "0.4.14"
env_logger = "0.8.3"
sled = "0.34.6"
slog = "2.7.0"
slog-json = "2.3.0"
slog-bunyan = "2.3.0"
slog-async = "2.6.0"

[dev-dependencies]
assert_cmd = "1.0.3"
tempfile = "3.2.0"
criterion = "0.3.4"
predicates = "1.0.7"
rand = "0.8.3"
walkdir = "2.3.1"
