[package]
name = "project-4"
version = "0.1.0"
authors = ["kuronyago <yegor.pesterev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
crossbeam = "0.8.0"
crossbeam-utils = "0.8.2"
panic-control = "0.1.4"
predicates = "1.0.7"
rand = "0.8.3"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.62"
slog = "2.7.0"
slog-async = "2.6.0"
slog-json = "2.3.0"
structopt = "0.3.21"
thiserror = "1.0.24"
